@@ -1,14 +1,18 @@
 package pl.lodz.p.ias.io.zasoby.service;
 
+import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import pl.lodz.p.ias.io.zasoby.dto.ResourceDTO;
 import pl.lodz.p.ias.io.zasoby.dto.WarehouseDTO;
 import pl.lodz.p.ias.io.zasoby.model.Warehouse;
 import pl.lodz.p.ias.io.zasoby.repository.WarehouseRepository;
 import pl.lodz.p.ias.io.zasoby.utils.WarehouseConverter;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -27,13 +31,26 @@ public class WarehouseService {
         return warehouseConverter.convertWarehouseToDTO(warehouse);
     }
 
-    public List<WarehouseDTO> findAll() {
-        return warehouseRepository.findAll().stream()
-                .map(warehouse -> new WarehouseDTO(
-                        warehouse.getWarehouseName(),
-                        warehouse.getLocation()
-                ))
-                .toList();
+    public WarehouseDTO getWarehouseById(long id) {
+        Warehouse warehouse = warehouseRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Warehouse with id " + id + " not found"));
+        return warehouseConverter.convertWarehouseToDTO(warehouse);
+    }
+
+    public List<WarehouseDTO> getAllWarehouses() {
+        return warehouseRepository.findAll()
+                .stream()
+                .map(warehouseConverter::convertWarehouseToDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Transactional
+    public void updateWarehouse(long id, WarehouseDTO warehouseDTO) {
+        Warehouse warehouse = warehouseRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Warehouse with id " + id + " not found"));
+
+        warehouse.setWarehouseName(warehouseDTO.getWarehouseName());
+        warehouse.setLocation(warehouseDTO.getLocation());
     }
 
 //    public WarehouseDTO findById(Long id) {
